<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterPatientDetailsActivity">

    <EditText
        android:id="@+id/edit_text1"
        android:layout_below="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/namepatient"


        />
    <TextView
        android:layout_marginTop="175dp"
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/maincolor"
        android:textSize="25sp"

        android:text="Patient Details"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edit_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/agepatient"
        android:maxLines="1"
        android:textAlignment="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edit_text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text2"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/conpatient"
        android:textAlignment="center"/>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_main_background"
        android:text="@string/sub"
        android:textColor="#fff"
        android:textStyle="bold"/>
</RelativeLayout>