<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ForgotPasswordActivity">
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enternewpass"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:textColor="#B42013"
        />

    <EditText
        android:layout_below="@+id/text"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:background="@drawable/edittext_background"
        android:maxLines="1"
        android:padding="10dp" />
    <TextView
        android:layout_below="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:id="@+id/text2"
        android:textColor="@color/maincolor"
        android:textStyle="bold"
        android:text="@string/lenofpass"/>

    <Button
        android:layout_below="@+id/text2"
        android:background="@drawable/button_main_background"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/submit1"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/next"/>

</RelativeLayout>